--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             }
         }();
     </script>
+    <script>
+analytics.track( "Testing",
+{ "action": "Testing",
+"properties": {"category": "SubmitForm"}
+}
+);
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
