--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ analytics.track( "Testing",
 );
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel=“canonical” href=“https://example.com/sample-page/” />
 </head>
 
 <body>
