--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Analytics.js Source Test</title>
+    <link rel="canonical" href="https://example.com/something" />
+
     <script>
         !function () {
             var analytics = window.analytics = window.analytics || []; if (!analytics.initialize) if (analytics.invoked) window.console && console.error && console.error("Segment snippet included twice."); else {
@@ -20,7 +22,6 @@ analytics.track( "Testing",
 );
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel=“canonical” href=“https://example.com/sample-page/” />
 </head>
 
 <body>
